fixing issues where a really large quantity breaks the receipt layout

--- a/styles/modules/modals/_purchase.scss
+++ b/styles/modules/modals/_purchase.scss
@@ -73,6 +73,12 @@
       .subShipping {
         padding-left: $pad;
       }
+
+      .constrainedWidth {
+        max-width: 50%;
+        flex-grow: 1;
+        flex-shrink: 0;        
+      }
     }
   }
 
